# ekm_sql_server

./: .gitignore  BUILD.md  Cargo.toml  DEPLOY.md  FLOWS.md  LICENSE  README.md  build.rs  config.test.toml  config.toml.example  kms_test_server.toml  tests.md
.cargo/: config.toml
.github/scripts/: build_ekm_dll.ps1
.github/workflows/: build.yml
certificates/: README.md  admin.cert.pem  admin.key.pem  ca.cert.pem  ca.cert.srl  ca.key.pem  san.cnf  server.cert.pem  server.csr.pem  server.key.pem
guides/: EKM Technical Documentation MIT License.docx  SQL Server 2008 EKM Design Specification.docx  SQL Server 2008 EKM Development Guide.docx  SQL Server 2008 EKM Development Guide.md  SQL Server 2008 EKM Testing Guidance.docx  sqlcrypt.h
guides/USBCryptoProvider/: USBCryptoProvider.sln
guides/USBCryptoProvider/USBCryptoProvider/: InstallProv.bat  KeyManager.cpp  KeyManager.h  ReadMe.txt  SessionManager.cpp  SessionManager.h  USBCryptoProvider.cpp  USBCryptoProvider.def  USBCryptoProvider.h  USBCryptoProvider.vcproj  USBProvider.xml  Util.cpp  Util.h  sqlcrypt.h  stdafx.cpp  stdafx.h
scripts/: CosmianEKM.cer  Deploy-EkmDll.ps1  Initialize-EkmEnvironment.ps1  New-EkmCertificate.ps1  Prepare-Integration-Tests.ps1  Sign-EkmDll.ps1  generate_certificates.ps1
src/: config.rs  key_store.rs  kms_client.rs  lib.rs  session_store.rs  sqlcrypt.h  wrapper.h
test_provider_c/: .gitignore  README.md  sign_and_deploy.ps1  test_provider.c  version.rc
tests/: integration.rs
tools/: generate_certs.rs
