[package]
name = "cosmian_ekm_sql_server"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmian_kms_client = "5.16"
cosmian_http_client = "0.7"
tokio = { version = "1", features = ["rt-multi-thread"] }
x509-cert = { version = "0.2", features = ["pem"] }
openssl = "0.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

[build-dependencies]
bindgen = "0.71"

[[bin]]
name = "generate-certs"
path = "tools/generate_certs.rs"
